infra/k8s/orders-depl.yaml
#section that create the deployment and the pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: orders
  template: 
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: ahmed0ahmed/orders
          imagePullPolicy : Never
---
#kubernets service cluesterip so we can acess the pod
#default service is clusterip service that why we didint have to
#specifie it
apiVersion: v1
kind: Service
metadata: 
  name: orders-srv
spec: 
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
