infra/k8s/payments-depl.yaml
#section that create the deployment and the pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: payments
  template: 
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: ahmed0ahmed/payments
          imagePullPolicy : Never
---
#kubernets service cluesterip so we can acess the pod
#default service is clusterip service that why we didint have to
#specifie it
apiVersion: v1
kind: Service
metadata: 
  name: payments-srv
spec: 
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
